# ida-objc-helper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: ida-plugin.json  plugin.py
src/base/: utils.py
src/idahelper/: tif.py  widgets.py
src/idahelper/microcode/: optimizers.py
src/objchelper/: __init__.py  core.py
src/objchelper/base/: reloadable_plugin.py
src/objchelper/idahelper/: cpp.py  file_format.py  functions.py  instructions.py  kernelcache.py  memory.py  pac.py  segments.py  strings.py  tif.py  widgets.py  xrefs.py
src/objchelper/idahelper/ast/: cexpr.py  cfunc.py  lvars.py
src/objchelper/idahelper/microcode/: mba.py  mop.py  optimizers.py  visitors.py
src/objchelper/plugins/cpp_vtbl/: __init__.py  cpp_vtbl.py
src/objchelper/plugins/dataflow/: __init__.py  dataflow.py  engine.py
src/objchelper/plugins/func_renamers/: __init__.py  func_renamers.py  handlers.py  renamer.py  visitor.py
src/objchelper/plugins/generic_calls_fix/: __init__.py  generic_calls_fix.py
src/objchelper/plugins/jump_to_string/: __init__.py  jump_to_string.py
src/objchelper/plugins/kalloc_type/: __init__.py  kalloc_type.py
src/objchelper/plugins/obj_this/: __init__.py  obj_this.py
src/objchelper/plugins/obj_vtbl/: __init__.py  obj_vtbl.py
src/objchelper/plugins/objc_block/: __init__.py  analyze_byref_args.py  block.py  block_arg_byref.py  objc_block.py  optimize_blocks_init.py  (+1 more)
src/plugins/objc_refcnt/: optimizer.py
src/plugins/oslog/: __init__.py  error_case_optimizer.py  log_enabled_optimizer.py  log_macro_optimizer.py  os_log.py
(+48 files in other folders)
